fix tab content visibility and add carousel

--- a/tree.css
+++ b/tree.css
@@ -35,12 +35,3 @@
     font-family: 'Comfortaa', cursive;
 }
 
-.carousel-item {
-  height: 100vh;
-  min-height: 100px;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
